// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CheckBoxInput renders a disabled input 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 kQNwCm"
>
  <div
    class="ThemeProvider__AppWrapper-sc-12xd2cf-0 fmpnGZ"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 waIbx FormField__FormFieldBox-sc-m9hood-0 bhAVGb CheckBoxInput__StyledFormField-sc-16fe619-0 gMCnDp"
      tabindex="0"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 clUCbD FormField__FormFieldContentBox-sc-m9hood-1"
      >
        <label
          class="StyledCheckBox__StyledCheckBoxContainer-sc-1dbk5ju-1 ZJrqU"
          disabled=""
          label="Some input"
        >
          <div
            class="StyledBox-sc-13pk1d4-0 hkSBDt StyledCheckBox-sc-1dbk5ju-6 bdhoTD"
            disabled=""
          >
            <input
              class="StyledCheckBox__StyledCheckBoxInput-sc-1dbk5ju-2 fonZvB"
              disabled=""
              tabindex="-1"
              type="checkbox"
              value="Hi people"
            />
            <div
              class="StyledBox-sc-13pk1d4-0 hkRrvb StyledCheckBox__StyledCheckBoxBox-sc-1dbk5ju-3 jBcQuc"
              disabled=""
            />
          </div>
          <span>
            Some input
          </span>
        </label>
      </div>
    </div>
  </div>
</div>
`;

exports[`CheckBoxInput renders a simple input 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 kQNwCm"
>
  <div
    class="ThemeProvider__AppWrapper-sc-12xd2cf-0 fmpnGZ"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 waIbx FormField__FormFieldBox-sc-m9hood-0 bhAVGb CheckBoxInput__StyledFormField-sc-16fe619-0 gMCnDp"
      tabindex="0"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 clUCbD FormField__FormFieldContentBox-sc-m9hood-1"
      >
        <label
          class="StyledCheckBox__StyledCheckBoxContainer-sc-1dbk5ju-1 kskyXJ"
          label="Some input"
        >
          <div
            class="StyledBox-sc-13pk1d4-0 hkSBDt StyledCheckBox-sc-1dbk5ju-6 bdhoTD"
          >
            <input
              class="StyledCheckBox__StyledCheckBoxInput-sc-1dbk5ju-2 hFoUtd"
              tabindex="-1"
              type="checkbox"
              value="Hi people"
            />
            <div
              class="StyledBox-sc-13pk1d4-0 hkRrvb StyledCheckBox__StyledCheckBoxBox-sc-1dbk5ju-3 jBcQuc"
            />
          </div>
          <span>
            Some input
          </span>
        </label>
      </div>
    </div>
  </div>
</div>
`;

exports[`CheckBoxInput renders a toggle input 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 kQNwCm"
>
  <div
    class="ThemeProvider__AppWrapper-sc-12xd2cf-0 fmpnGZ"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 waIbx FormField__FormFieldBox-sc-m9hood-0 bhAVGb CheckBoxInput__StyledFormField-sc-16fe619-0 gMCnDp"
      tabindex="0"
    >
      <label
        class="StyledText-sc-1sadyjn-0 eeOkGI"
      >
        A checkbox
      </label>
      <span
        class="StyledText-sc-1sadyjn-0 hhNxug"
      >
        A helpful message
      </span>
      <div
        class="StyledBox-sc-13pk1d4-0 clUCbD FormField__FormFieldContentBox-sc-m9hood-1"
      >
        <label
          class="StyledCheckBox__StyledCheckBoxContainer-sc-1dbk5ju-1 kskyXJ"
          label="Hi friends"
        >
          <div
            class="StyledBox-sc-13pk1d4-0 hkSBDt StyledCheckBox-sc-1dbk5ju-6 bdhoTD"
          >
            <input
              class="StyledCheckBox__StyledCheckBoxInput-sc-1dbk5ju-2 hFoUtd"
              tabindex="-1"
              type="checkbox"
            />
            <span
              class="StyledCheckBox__StyledCheckBoxToggle-sc-1dbk5ju-4 fgFui"
            >
              <span
                class="StyledCheckBox__StyledCheckBoxKnob-sc-1dbk5ju-5 ghFPjF"
              />
            </span>
          </div>
          <span>
            Hi friends
          </span>
        </label>
      </div>
      <span
        class="StyledText-sc-1sadyjn-0 bWzGTv"
      >
        Some info
      </span>
    </div>
  </div>
</div>
`;

exports[`CheckBoxInput renders an input with a form field label 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 kQNwCm"
>
  <div
    class="ThemeProvider__AppWrapper-sc-12xd2cf-0 fmpnGZ"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 waIbx FormField__FormFieldBox-sc-m9hood-0 bhAVGb CheckBoxInput__StyledFormField-sc-16fe619-0 gMCnDp"
      tabindex="0"
    >
      <label
        class="StyledText-sc-1sadyjn-0 eeOkGI"
      >
        A brilliant input
      </label>
      <div
        class="StyledBox-sc-13pk1d4-0 clUCbD FormField__FormFieldContentBox-sc-m9hood-1"
      >
        <label
          class="StyledCheckBox__StyledCheckBoxContainer-sc-1dbk5ju-1 kskyXJ"
          label="Some input"
        >
          <div
            class="StyledBox-sc-13pk1d4-0 hkSBDt StyledCheckBox-sc-1dbk5ju-6 bdhoTD"
          >
            <input
              class="StyledCheckBox__StyledCheckBoxInput-sc-1dbk5ju-2 hFoUtd"
              tabindex="-1"
              type="checkbox"
              value="Hi people"
            />
            <div
              class="StyledBox-sc-13pk1d4-0 hkRrvb StyledCheckBox__StyledCheckBoxBox-sc-1dbk5ju-3 jBcQuc"
            />
          </div>
          <span>
            Some input
          </span>
        </label>
      </div>
    </div>
  </div>
</div>
`;

exports[`CheckBoxInput renders an input with a help message 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 kQNwCm"
>
  <div
    class="ThemeProvider__AppWrapper-sc-12xd2cf-0 fmpnGZ"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 waIbx FormField__FormFieldBox-sc-m9hood-0 bhAVGb CheckBoxInput__StyledFormField-sc-16fe619-0 gMCnDp"
      tabindex="0"
    >
      <span
        class="StyledText-sc-1sadyjn-0 hhNxug"
      >
        This is a very cool input
      </span>
      <div
        class="StyledBox-sc-13pk1d4-0 clUCbD FormField__FormFieldContentBox-sc-m9hood-1"
      >
        <label
          class="StyledCheckBox__StyledCheckBoxContainer-sc-1dbk5ju-1 kskyXJ"
          label="Some input"
        >
          <div
            class="StyledBox-sc-13pk1d4-0 hkSBDt StyledCheckBox-sc-1dbk5ju-6 bdhoTD"
          >
            <input
              class="StyledCheckBox__StyledCheckBoxInput-sc-1dbk5ju-2 hFoUtd"
              tabindex="-1"
              type="checkbox"
              value="Hi people"
            />
            <div
              class="StyledBox-sc-13pk1d4-0 hkRrvb StyledCheckBox__StyledCheckBoxBox-sc-1dbk5ju-3 jBcQuc"
            />
          </div>
          <span>
            Some input
          </span>
        </label>
      </div>
    </div>
  </div>
</div>
`;

exports[`CheckBoxInput renders an input with a validation error 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 kQNwCm"
>
  <div
    class="ThemeProvider__AppWrapper-sc-12xd2cf-0 fmpnGZ"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 waIbx FormField__FormFieldBox-sc-m9hood-0 bhAVGb CheckBoxInput__StyledFormField-sc-16fe619-0 gMCnDp"
      tabindex="0"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 clUCbD FormField__FormFieldContentBox-sc-m9hood-1"
      >
        <label
          class="StyledCheckBox__StyledCheckBoxContainer-sc-1dbk5ju-1 kskyXJ"
          label="Some input"
        >
          <div
            class="StyledBox-sc-13pk1d4-0 hkSBDt StyledCheckBox-sc-1dbk5ju-6 bdhoTD"
          >
            <input
              class="StyledCheckBox__StyledCheckBoxInput-sc-1dbk5ju-2 hFoUtd"
              tabindex="-1"
              type="checkbox"
              value="Hi people"
            />
            <div
              class="StyledBox-sc-13pk1d4-0 hkRrvb StyledCheckBox__StyledCheckBoxBox-sc-1dbk5ju-3 jBcQuc"
            />
          </div>
          <span>
            Some input
          </span>
        </label>
      </div>
      <span
        class="StyledText-sc-1sadyjn-0 cbXpay"
      >
        You failed at this
      </span>
    </div>
  </div>
</div>
`;

exports[`CheckBoxInput renders an input with an info message 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 kQNwCm"
>
  <div
    class="ThemeProvider__AppWrapper-sc-12xd2cf-0 fmpnGZ"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 waIbx FormField__FormFieldBox-sc-m9hood-0 bhAVGb CheckBoxInput__StyledFormField-sc-16fe619-0 gMCnDp"
      tabindex="0"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 clUCbD FormField__FormFieldContentBox-sc-m9hood-1"
      >
        <label
          class="StyledCheckBox__StyledCheckBoxContainer-sc-1dbk5ju-1 kskyXJ"
          label="Some input"
        >
          <div
            class="StyledBox-sc-13pk1d4-0 hkSBDt StyledCheckBox-sc-1dbk5ju-6 bdhoTD"
          >
            <input
              class="StyledCheckBox__StyledCheckBoxInput-sc-1dbk5ju-2 hFoUtd"
              tabindex="-1"
              type="checkbox"
              value="Hi people"
            />
            <div
              class="StyledBox-sc-13pk1d4-0 hkRrvb StyledCheckBox__StyledCheckBoxBox-sc-1dbk5ju-3 jBcQuc"
            />
          </div>
          <span>
            Some input
          </span>
        </label>
      </div>
      <span
        class="StyledText-sc-1sadyjn-0 bWzGTv"
      >
        You can set a cool value
      </span>
    </div>
  </div>
</div>
`;
